# RevoU-Next-Milestone2-Be

./: .env  Dockerfile  README.md  app.py  celery_app.py  imagekit_config.py  pyproject.toml
controller/: userController.py
migrations/versions/: 060e2d1d959c_remove_product_imag_url.py  09effa6c6e61_add_table_productimage.py  2dde10e7f390_add_visitor.py  30c0f5f79a25_add_visitor_table_and_gender_for_user.py  38f4a67b82be_initial_migration.py  3e1bf63c3fd8_add_order_an_order_item_table2.py  78a66d92dda1_add_cart_table.py  a2c800b374ea_add_bank_table_and_update_user_coloumn.py  a91c6406aed2_add_shop.py  b35f9a3b1f49_add_shop_id_to_product_model.py  ba92c30841a5_add_visitor_product_model.py  e48ea5c395e9_add_user_imageid.py  fe5818f375a4_add_gender_user.py
model/: bankModel.py  cartModel.py  orderModel.py  productImageModel.py  productModel.py  productVisitorModel.py  shopModel.py  userModel.py  visitorModel.py
router/: bankRoute.py  cartRoute.py  orderRoute.py  productImageRoute.py  productRoute.py  productVisitorRoute.py  shopRoute.py  uploadRoute.py  userRoute.py  visitorRoute.py
schemas/: auth_schema.py  bank_schema.py  cart_schema.py  order_schema.py  productImage_schema.py  productVisitor_schema.py  product_schema.py  shop_schema.py  visitor_schema.py
services/: auth_service.py  bank_service.py  cart_service.py  order_service.py  productImage_service.py  productVisitor_service.py  product_service.py  shop_service.py  uploadimg_service.py  visitor_service.py
utils/: imageValidator.py
