[tool.poetry]
name = "revou-next-milestone2-be"
version = "0.1.0"
description = ""
authors = ["regaruzianto <regaruzianto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.3.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
python-dotenv = "^1.1.0"
supabase = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
