[tool.poetry]
name = "revou-next-milestone2-be"
version = "0.1.0"
description = "E-Commerce Backend API using Flask and SQLAlchemy"
authors = ["regaruzianto <regaruzianto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.3.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
python-dotenv = "^1.1.0"
supabase = "^2.15.0"
marshmallow = "^3.20.1"
marshmallow-sqlalchemy = "^0.29.0"
email-validator = "^2.1.0.post1"
celery = "^5.5.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
